Correction of work experience

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Of Business</h3>
+	   					<h3>Project Lead</h3>
 	   					<p>November 2014 - April 2016</p>
 	   				</div>
 
