--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
    		<div class="col-twelve">
 
    			<h5>About</h5>
-   			<h1>Let me introduce me</h1>
+   			<h1>Let introduce me</h1>
 
    			<div class="intro-info">
 
