--- a/index.html
+++ b/index.html
@@ -130,12 +130,8 @@
    					<span>Fabian Camilo Peña Lozano</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>April 20, 1991</span>
-   				</li>
-   				<li>
-   					<strong>Current Job:</strong>
-   					<span>Research Assistant, Universidad de los Andes</span>
+   					<strong>Age:</strong>
+   					<span>27</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
