--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>Python</strong><small>Pandas, Django, Tornado</small>
+				   	<strong>Python</strong><small>Pandas, Scikit-Learn, Tensorflow, Django, Tornado</small>
 				   </li>
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
