--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Seeking to get value from your data</h5>
+	   			<h5>Seeking for value from your data?</h5>
 	   			<h1>I'm Fabian Peña</h1>
 
 	   			<p class="intro-position">
