--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
  	<!-- CSS
    ================================================== -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
    <link rel="stylesheet" href="css/base.css">  
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/vendor.css">     
@@ -123,27 +124,16 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>Personal Data</h3>
+   			<h3>Soft Skills</h3>
 
-   			<ul class="info-list">
-   				<li>
-   					<strong>Full Name:</strong>
-   					<span>Fabian Camilo Peña Lozano</span>
-   				</li>
-   				<li>
-   					<strong>Age:</strong>
-   					<span>27</span>
-   				</li>
-   				<li>
-   					<strong>Phone:</strong>
-   					<span>(+57) 317 378 00 11</span>
-   				</li>
-   				<li>
-   					<strong>Email:</strong>
-   					<span>fabiancpl@luloinc.co</span>
-   				</li>
-
-   			</ul> <!-- /info-list -->
+   			<div style="text-align: center;">
+			  <button>Creativity</button>
+			  <button>Collaboration</button>
+			  <button>Adaptability</button>
+			  <button>Problem-Solving</button>
+			  <button>Decision-Making</button>
+			  <button>Time Management</button>
+			</div>
 
    		</div>
 
