--- a/index.html
+++ b/index.html
@@ -223,6 +223,24 @@
 	   				</div>
 
 	   				<div class="timeline-header">
+	   					<h3>Data Scientist</h3>
+	   					<p>February 2018 - To Date</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Analytic Lab Works</h4>
+	   					<p>Develop a Big Data and Analytics platform in the context of smart cities. More specifically, for customers working on mobility and environmental management.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+				
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
 	   					<h3>CEO</h3>
 	   					<p>December 2018 - To Date</p>
 	   				</div>
