--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Data Scientist</h3>
-	   					<p>February 2018 - To Date</p>
+	   					<p>February 2019 - To Date</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -241,7 +241,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>CEO</h3>
+	   					<h3>CTO</h3>
 	   					<p>December 2018 - To Date</p>
 	   				</div>
 
