Updating work experience

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
    	<ul class="intro-social">
    		<li><a target="_blank" href="tel:+573173780011"><i class="fa fa-phone"></i></a></li>
 		<li><a target="_blank" href="https://wa.me/+573173780011"><i class="fa fa-whatsapp"></i></a></li>
-		<li><a target="_blank" href="mailto:fabiancpl@luloinc.co"><i class="fa fa-envelope"></i></a></li>
+		<li><a target="_blank" href="mailto:fabiancpl91@gmail.com"><i class="fa fa-envelope"></i></a></li>
    		<li><a target="_blank" href="https://www.linkedin.com/in/fabiancpl/"><i class="fa fa-linkedin"></i></a></li>
    		<li><a target="_blank" href="https://twitter.com/fabiancpl"><i class="fa fa-twitter"></i></a></li>
         <li><a target="_blank" href="https://www.facebook.com/fabiankee"><i class="fa fa-facebook"></i></a></li>
@@ -114,7 +114,7 @@
 
    				<img src="resources/foto_fabianPenna.jpeg" alt="Profile Picture">
 
-   				<p class="lead">I am a Master's student of Information Engineering and I am currently working on my thesis project focused on helping you to interact and interpret Machine Learning systems. I have implemented data analytics and Big Data solutions in contexts suchs as tax administration, public health and mobility. In addition, I have previous experience in software development (backend and frontend) and TI infraestructure.</p>
+   				<p class="lead">I have a master degree in Information Engineering with focus on visual analytics and machine learning. I have implemented data analytics and big data solutions in contexts suchs as smart cities, transportation, environmental management, tax administration and public health. In addition, I have experience in software development and cloud computing.</p>
    			</div>   			
 
    		</div>   		
@@ -148,26 +148,26 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>Java</strong><small>Hibernate, Jersey, Spring</small>
+				   	<strong>Javascript</strong><small>Angular, D3, Mapbox GL, Node</small>
 				   </li>
 				   <li>
 				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Javascript</strong><small>Angular, D3</small>
+				   	<strong>Java</strong><small>Micronaut, JPA, Jersey</small>
 				   </li>
 				   <li>
-				   <div class="progress percent75"><span>70%</span></div>
-				   	<strong>Data Visualization</strong><small>Tableau, Power BI</small>
+				   <div class="progress percent70"><span>70%</span></div>
+				   	<strong>Cloud Computing</strong><small>Google Cloud, AWS, Azure</small>
 				   </li>
 				   <li>
-				   <div class="progress percent75"><span>70%</span></div>
-				   	<strong>Cloud Computing</strong><small>AWS, Azure, Google Cloud</small>
+				   <div class="progress percent70"><span>70%</span></div>
+				   	<strong>Dashboarding</strong><small>Tableau, Power BI</small>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>70%</span></div>
+				   	<div class="progress percent70"><span>70%</span></div>
 				   	<strong>SQL</strong><small>PostgreSQL, MySQL, Oracle</small>
 				   </li>
 				   <li>
-				   <div class="progress percent75"><span>60%</span></div>
+				   <div class="progress percent60"><span>60%</span></div>
 				   	<strong>No-SQL</strong><small>MongoDB, Cassandra</small>
 				   </li>
 				   
@@ -223,18 +223,18 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Data Scientist</h3>
+	   					<h3>Lead Data Scientist</h3>
 	   					<p>February 2019 - To Date</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Analytic Lab Works</h4>
-	   					<p>Develop a Big Data and Analytics platform in the context of smart cities. More specifically, for customers working on mobility and environmental management.</p>
+	   					<h4>Analytic Lab</h4>
+	   					<p>Design and development of a smart cities platform for transportation and environmental management. Lead a team composed by data scientists and software developers building machine learning models, data visualizations and microservices based on multiple open-source technologies running on Google Cloud Platform.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 				
-				<div class="timeline-block">
+				<!--<div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-briefcase"></i>
@@ -250,7 +250,7 @@
 	   					<p>We help companies to extract insights from data for effective decision-making through machine learning algorithms and interactive visualizations. We use agile methodologies for continuos stakeholder involvement and quick value generation.</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+	   			</div>--> <!-- /timeline-block -->
 
    				<div class="timeline-block">
 
@@ -265,7 +265,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Universidad de los Andes - Alianza CAOBA</h4>
-	   					<p>Design and development of solutions based on Data Analytics and Big Data for the CAOBA Alliance and its customers, principally government companies. Implementation of Machine Learning models, data transformation with Python and information visualization with JavaScript (D3.js). Use of multiple tools of the Hadoop ecosystem.</p>
+	   					<p>Design and development of solutions based on data analytics and big data for the CAOBA Alliance and its customers, principally government companies. Implementation of machine learning models, data transformation and visualization software using open-source technologies.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -283,7 +283,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Fundación de Egresados de la Universidad Distrital</h4>
-	   					<p>Teaching activities for the Big Data and Data Analytics course: Data science, information visualization and Machine Learning modules. Development of theoretical and practical sessions with a total duration of 60 hours.</p>
+	   					<p>Teaching activities for the big data and data analytics course: data science, information visualization and machine learning modules. Development of theoretical and practical sessions with a duration of 60 hours.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -300,8 +300,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>GreenTech</h4>
-	   					<p>Software development and support for electronic payment systems. Most pf the time I focused in the design and development of the frontend layer applying AngularJs and REST webservices.</p>
+	   					<h4>Green Tech</h4>
+	   					<p>Software development and support for electronic payment systems. Design and development of frontend on AngularJs and REST webservices.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -319,7 +319,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Of Business</h4>
-	   					<p>Management and implementation of projects of virtualization and information security. More specifically, I worked in the administration of VMware virtualization environments, application and database server diagnostic and implementation of domain controller and terminal server hostings.</p>
+	   					<p>Management and implementation of projects of virtualization and information security. Administration of VMware, diagnostic of application and database servers and implementation of domain controller and terminal server hostings.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -337,7 +337,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>IBM</h4>
-	   					<p>Software development for the National Savings Fund (Fondo Nacional de Ahorro) based on Java Enterprise Edition, REST webservices y Javascript. I was also involved in the development of store procedures in DB2.</p>
+	   					<p>Software development for the National Savings Fund (Fondo Nacional de Ahorro) based on Java Enterprise Edition, REST webservices and Javascript. I was also involved in the development of store procedures in DB2.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -386,12 +386,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Master Degree</h3>
-	   					<p>January 2017 - To Date</p>
+	   					<p>January 2017 - October 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Universidad de los Andes</h4>
-	   					<p>Master of Information Engineering with enphasis in Machine Learning and Visual Analytics.</p>
+	   					<p>Master of Information Engineering with enphasis in visual analytics and machine learning.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -409,7 +409,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Universidad Distrital Francisco José de Caldas</h4>
-	   					<p>Systems Engineering with enphasis in software development, databases and Artificial Intelligence.</p>
+	   					<p>Systems Engineering with enphasis in software development, databases and artificial intelligence.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -466,7 +466,7 @@
 
 	            	<h3>Data Analysis</h3>  
 
-		            <p class="desc">My experience involves different stages of data lifecycle: getting and transforming large amounts of data and creating interactive data visualizations for insights extraction.</p>
+		            <p class="desc">My experience involves different stages of data lifecycle: getting and transforming data, modeling and designing of interactive visualizations.</p>
 
 	            </div>	                          
 
@@ -480,7 +480,7 @@
 
 	            	<h3>Software Development</h3>
 
-		            <p class="desc">For delivering data to staff and customers, you will need a robust and innovative software system applying agile development and cloud deployment common practices.</p> 
+		            <p class="desc">For delivering insights to staff and customers, you will need a software system. For this, I use agile methodologies and deployment in cloud.</p> 
 
 	            </div> 	            	               
 
@@ -664,7 +664,7 @@
      			<ul class="footer-social">        
 			    	<li><a target="_blank" href="tel:+573173780011"><i class="fa fa-phone"></i></a></li>
 					<li><a target="_blank" href="https://wa.me/+573173780011"><i class="fa fa-whatsapp"></i></a></li>
-					<li><a target="_blank" href="mailto:fabiancpl@luloinc.co"><i class="fa fa-envelope"></i></a></li>
+					<li><a target="_blank" href="mailto:fabiancpl91@gmail.com"><i class="fa fa-envelope"></i></a></li>
    					<li><a target="_blank" href="https://www.linkedin.com/in/fabiancpl/"><i class="fa fa-linkedin"></i></a></li>
    					<li><a target="_blank" href="https://twitter.com/fabiancpl"><i class="fa fa-twitter"></i></a></li>
         			<li><a target="_blank" href="https://www.facebook.com/fabiankee"><i class="fa fa-facebook"></i></a></li>
