--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Do you know how to become a data-driven organization?</h5>
+	   			<h5>Do you know how to be a data-driven organization?</h5>
 	   			<h1>I'm Fabian Peña</h1>
 
 	   			<p class="intro-position">
