Updating work experience

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Internship</h3>
+	   					<h3>Intern</h3>
 	   					<p>July 2014 - November 2014</p>
 	   				</div>
 
