Adding download CV button

--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
 
    	</div>
 
-   	<!--<div class="row button-section">
+   	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+   			<!--<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>-->
    			<a target="_blank" href="./resources/cv.pdf" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
-   	</div>-->
+   	</div>
 
    </section> <!-- /process-->    
 
