Updating work experience

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
    				<img src="resources/foto_fabianPenna.jpeg" alt="Profile Picture">
 
-   				<p class="lead">I have a master degree in Information Engineering with focus on visual analytics and machine learning. I have implemented data analytics and big data solutions in contexts suchs as smart cities, transportation, environmental management, tax administration and public health. In addition, I have experience in software development and cloud computing.</p>
+   				<p class="lead">I have a master degree in Information Engineering with focus on visual analytics and machine learning. I have implemented data analytics and big data solutions in contexts such as smart cities, transportation, environmental management, tax administration and public health. In addition, I have experience in software development and cloud computing.</p>
    			</div>   			
 
    		</div>   		
