Updating cv in pdf version

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Research Assistant</h3>
+	   					<h3>Research Assistant - Consultant</h3>
 	   					<p>January 2017 - December 2018</p>
 	   				</div>
 
