--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 		<li><a target="_blank" href="https://wa.me/+573173780011"><i class="fa fa-whatsapp"></i></a></li>
 		<li><a target="_blank" href="mailto:fabiancpl91@gmail.com"><i class="fa fa-envelope"></i></a></li>
    		<li><a target="_blank" href="https://www.linkedin.com/in/fabiancpl/"><i class="fa fa-linkedin"></i></a></li>
+   		<li><a target="_blank" href="https://github.com/fabiancpl"><i class="fa fa-github"></i></a></li>
    		<li><a target="_blank" href="https://twitter.com/fabiancpl"><i class="fa fa-twitter"></i></a></li>
-        <li><a target="_blank" href="https://www.facebook.com/fabiankee"><i class="fa fa-facebook"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -112,7 +112,7 @@
 
    			<div class="intro-info">
 
-   				<img src="resources/foto_fabianPenna.jpeg" alt="Profile Picture">
+   				<img src="resources/foto_fabianPenna.jpeg" alt="Profile Picture" style="height: 11rem !important; width: 11rem  !important;">
 
    				<p class="lead">I have a master degree in Information Engineering with focus on visual analytics and machine learning. I have implemented data analytics and big data solutions in contexts such as smart cities, transportation, environmental management, tax administration and public health. In addition, I have experience in software development and cloud computing.</p>
    			</div>   			
@@ -666,8 +666,8 @@
 					<li><a target="_blank" href="https://wa.me/+573173780011"><i class="fa fa-whatsapp"></i></a></li>
 					<li><a target="_blank" href="mailto:fabiancpl91@gmail.com"><i class="fa fa-envelope"></i></a></li>
    					<li><a target="_blank" href="https://www.linkedin.com/in/fabiancpl/"><i class="fa fa-linkedin"></i></a></li>
+   					<li><a target="_blank" href="https://github.com/fabiancpl"><i class="fa fa-github"></i></a></li>
    					<li><a target="_blank" href="https://twitter.com/fabiancpl"><i class="fa fa-twitter"></i></a></li>
-        			<li><a target="_blank" href="https://www.facebook.com/fabiankee"><i class="fa fa-facebook"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
