Updating experience and technologies

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Software Development Consultant</h3>
+	   					<h3>Software Developer</h3>
 	   					<p>April 2016 - June 2017</p>
 	   				</div>
 
